Add fonts for compliance with PDF/A and bump openpdftohtml version

--- a/templates/pale/fagmelding.hbs
+++ b/templates/pale/fagmelding.hbs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <style>
+        * {
+            font-family: "Source Sans Pro" !important;
+        }
         @page {
             size: A4 portrait;
             margin: 0.2cm;
@@ -11,7 +14,6 @@
             font-weight: bold;
             font-style: normal;
             font-size: 24px;
-            font-family: Arial, sans-serif;
         }
 
         h2 {
@@ -20,7 +22,6 @@
             font-size: 16px;
             margin-top: 5px;
             margin-bottom: 2px;
-            font-family: Arial, sans-serif;
         }
         p {
             margin: 3px;
@@ -88,7 +89,6 @@
             height: 12px;
             font-size: 11px;
             font-weight: bold;
-            font-family: Arial, sans-serif;
             display: inline-block;
             vertical-align: middle;
             text-align: center;
