Add a more generic option for adding spaces to a string and some other minor r changes

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -151,7 +151,7 @@
                     {{ person.navn }}
                 </p>
                 <p class="id">
-                    {{ split_person_id person.pnr }}
+                    {{ insert_at person.pnr 6 }}
                 </p>
             </div>
         </div>
