--- a/templates/pale/behandlingsvedlegg.hbs
+++ b/templates/pale/behandlingsvedlegg.hbs
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <style>
+        * {
+            font-family: "Source Sans Pro" !important;
+        }
         h1, h2, h3{
             font-weight: normal;
             font-style: normal;
