--- a/templates/pale/fagmelding.hbs
+++ b/templates/pale/fagmelding.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>Legeerklæring - fagmelding for {{ pasient.fornavn }} {{ pasient.mellomnavn }} {{ pasient.etternavn }}({{ pasient.foedselsnummer }})</title>
     <style>
         * {
             font-family: "Source Sans Pro" !important;
