Adds border to sykepengerutland template for debugging in preprod

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -55,11 +55,19 @@
         .personinfo {
             margin-top: 0.7cm;
             margin-bottom: 1cm;
+            border: 1px solid black;
         }
 
         .navn {
             font-weight: bold;
             font-size: 14px;
+            width: 470px;
+            border: 1px solid black;
+        }
+
+        .id {
+            width: 470px;
+            border: 1px solid black;
         }
 
         .personikon {
@@ -73,16 +81,21 @@
             display: inline-block;
             margin-left: -6px;
             padding-left: 0;
+            border: 1px solid black;
         }
 
         .sendt {
             position: absolute;
-            right: 3cm;
+            right: 1cm;
             font-size: 10px;
+            border: 1px solid black;
+            width: 180px;
         }
 
         .svar {
             margin-top: 4px;
+            border: 1px solid black;
+            width: 683px;
         }
 
         .svar--perioder {
@@ -110,6 +123,7 @@
 
         .sporsmal {
             margin-bottom: 0.5cm;
+            border: 1px solid black;
         }
 
         .sporsmalstekst {
