--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -75,8 +75,8 @@
         .personikon {
             display: inline-block;
             width: 28px;
-            margin-right: 0;
-            padding-right: 0;
+            margin-right: 2px;
+            padding-right: 2px;
             border: 1px solid blue;
         }
 
@@ -124,14 +124,12 @@
 
         .svar--checkbox {
             display: inline-block;
-            position: relative;
-            bottom: 1px;
-            right: 5px;
         }
 
         .checkbox {
             width: 13px;
             border: 1px solid blue;
+            margin: 0 -3px -3px 0;
         }
 
         .sporsmal {
