Adds information in README, modifies sykepengerutland template

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -40,6 +40,7 @@
             display: inline-block;
             padding-top: 15px;
             padding-bottom: 12px;
+            margin-left: 3px;
             width: 48px;
         }
 
@@ -71,14 +72,12 @@
         .personikon {
             display: inline-block;
             width: 28px;
-            margin-right: 2px;
-            padding-right: 2px;
+            margin-right: 4px;
+            margin-left: 3px;
         }
 
         .persontekst {
             display: inline-block;
-            margin-left: -4px;
-            padding-left: 0;
         }
 
         .sendt {
@@ -108,7 +107,7 @@
         .svar--perioder {
             font-size: 16px;
             font-weight: bold;
-            margin-left: 2px;
+            margin-left: 3px;
 
         }
 
@@ -118,7 +117,7 @@
 
         .checkbox {
             width: 13px;
-            margin: 0 -3px -3px 0;
+            margin: -1px 5px 0px 1px;
         }
 
         .sporsmal {
