Moves person info to the top level

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -161,10 +161,10 @@
                     Sendt til NAV {{ iso_to_nor_date sendt }}
                 </p>
                 <p class="navn">
-                    {{ person.navn }}
+                    {{ navn }}
                 </p>
                 <p class="id">
-                    {{ insert_at person.pnr 6 }}
+                    {{ insert_at fnr 6 }}
                 </p>
             </div>
         </div>
