Attempts at including subquestions

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -204,6 +204,42 @@
                     </div>
                 {{/eq}}
             </div>
+            {{# each undersporsmal~}}
+              <div class="sporsmal">
+                <p class="sporsmalstekst">
+                    {{ sporsmalstekst }}
+                </p>
+                {{#eq svartype "PERIODER" }}
+                    <p class="svar svar--perioder">
+                        {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
+                    </p>
+                {{/eq}}
+                {{#eq svartype "FRITEKST" }}
+                    <p class="svar">
+                        {{ svar.0.verdi }}
+                    </p>
+                {{/eq}}
+                {{#eq svartype "CHECKBOX" }}
+                    <div class="svarcontainer">
+                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+                        <span class="svar svar--checkbox">
+                            {{ svar.0.verdi }}
+                        </span>
+                    </div>
+                {{/eq}}
+                {{#eq svartype "IKKE_RELEVANT" }}
+                    {{#if undertekst}}
+                        {{safe undertekst}}
+                    {{/if}}
+                    <div class="svarcontainer">
+                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+                        <span class="svar svar--checkbox">
+                            {{ svar.0.verdi }}
+                        </span>
+                    </div>
+                {{/eq}}
+              </div>
+            {{~/each}}
         {{~/each}}
         </div>
     </div>
