--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -1,250 +1,254 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <style>
-        @page {
-            size: A4 portrait;
-            margin: 0.2cm;
-        }
+  <meta charset="UTF-8">
+  <style>
+  @page {
+    size: A4 portrait;
+    margin: 0.2cm;
+  }
 
-        * {
-            font-family: "Source Sans Pro";
-        }
+  * {
+    font-family: "Source Sans Pro";
+  }
 
-        img {
-            image-rendering: pixelated;
-        }
+  img {
+    image-rendering: pixelated;
+  }
 
-        h1 {
-            font-weight: 700;
-            font-style: normal;
-            font-size: 18px;
-            font-family: "Source Sans Pro";
-        }
+  h1 {
+    font-weight: 700;
+    font-style: normal;
+    font-size: 18px;
+    font-family: "Source Sans Pro";
+  }
 
-        p {
-            margin: 3px;
-            font-size: 12px;
-            font-family: "Source Sans Pro";
-        }
+  p {
+    margin: 3px;
+    font-size: 12px;
+    font-family: "Source Sans Pro";
+  }
 
-        .title {
-            display: inline-block;
-            position: absolute;
-            top: 15px;
-            left: 100px;
-        }
+  .title {
+    display: inline-block;
+    position: absolute;
+    top: 15px;
+    left: 100px;
+  }
 
-        .navlogo {
-            display: inline-block;
-            padding-top: 15px;
-            padding-bottom: 12px;
-            margin-left: 3px;
-            width: 48px;
-        }
+  .navlogo {
+    display: inline-block;
+    padding-top: 15px;
+    padding-bottom: 12px;
+    margin-left: 3px;
+    width: 48px;
+  }
 
-        .header {
-            background: #C2EAF7;
-            padding: 0cm 0.7cm;
-        }
+  .header {
+    background: #C2EAF7;
+    padding: 0cm 0.7cm;
+  }
 
-        .container {
-            margin: 0cm 0.7cm;
-            height: 850px;
-        }
+  .container {
+    margin: 0cm 0.7cm;
+    height: 850px;
+  }
 
-        .personinfo {
-            position: relative;
-            top: 25px;
-        }
+  .personinfo {
+    position: relative;
+    top: 25px;
+  }
 
-        .navn {
-            font-weight: bold;
-            font-size: 14px;
-            width: 430px;
-        }
+  .navn {
+    font-weight: bold;
+    font-size: 14px;
+    width: 430px;
+  }
 
-        .id {
-            width: 430px;
-        }
+  .id {
+    width: 430px;
+  }
 
-        .personikon {
-            display: inline-block;
-            width: 28px;
-            margin-right: 4px;
-            margin-left: 3px;
-        }
+  .personikon {
+    display: inline-block;
+    width: 28px;
+    margin-right: 4px;
+    margin-left: 3px;
+  }
 
-        .persontekst {
-            display: inline-block;
-        }
+  .persontekst {
+    display: inline-block;
+  }
 
-        .sendt {
-            position: absolute;
-            right: 1cm;
-            font-size: 10px;
-            width: 180px;
-        }
+  .sendt {
+    position: absolute;
+    right: 1cm;
+    font-size: 10px;
+    width: 180px;
+  }
 
-        .sporsmalcontainer {
-            position: relative;
-            top: 50px;
-        }
+  .sporsmalcontainer {
+    position: relative;
+    top: 50px;
+  }
 
-        .svarcontainer {
-            position: relative;
-            left: 2px;
-        }
+  .svarcontainer {
+    position: relative;
+    left: 2px;
+  }
 
-        .svar {
-            margin-top: 4px;
-            width: 650px;
-            font-size: 12px;
-            font-family: "Source Sans Pro";
-        }
+  .svar {
+    margin-top: 4px;
+    width: 650px;
+    font-size: 12px;
+    font-family: "Source Sans Pro";
+  }
 
-        .svar--perioder {
-            font-size: 16px;
-            font-weight: bold;
-            margin-left: 3px;
+  .svar--perioder {
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 3px;
 
-        }
+  }
 
-        .svar--checkbox {
-            display: inline-block;
-        }
+  .svar--checkbox {
+    display: inline-block;
+  }
 
-        .checkbox {
-            width: 13px;
-            margin: -1px 5px 0px 1px;
-        }
+  .checkbox {
+    width: 13px;
+    margin: -1px 5px 0px 1px;
+  }
 
-        .sporsmal {
-            padding-bottom: 0.5cm;
-        }
+  .sporsmal {
+    padding-bottom: 0.5cm;
+  }
 
-        .sporsmalstekst {
-            font-weight: bold;
-        }
+  .sporsmalstekst {
+    font-weight: bold;
+  }
 
-        .footer {
-            display: block;
-            position: absolute;
-            top: 24.5cm;
-            left: 0.9cm;
-            font-size: 10px;
-            width: 680px;
-        }
+  .footer {
+    display: block;
+    position: absolute;
+    top: 24.5cm;
+    left: 0.9cm;
+    font-size: 10px;
+    width: 680px;
+  }
 
-        .sporsmal ul {
-            font-family: "Source Sans Pro";
-            font-size: 12px;
-        }
+  .sporsmal ul {
+    font-family: "Source Sans Pro";
+    font-size: 12px;
+  }
 
-        .sporsmal ul li {
-            margin-bottom: 12px;
-        }
+  .sporsmal ul li {
+    margin-bottom: 12px;
+  }
 
-    </style>
+  </style>
 </head>
 <body>
-    <div class="header">
-        <img class="navlogo" src="{{ image "Navlogo.png" }}" />
-        <h1 class="title">Søknad om å beholde sykepenger utenfor Norge</h1>
+  <div class="header">
+    <img class="navlogo" src="{{ image "Navlogo.png" }}" />
+    <h1 class="title">Søknad om å beholde sykepenger utenfor Norge</h1>
+  </div>
+  <div class="container">
+    <div class="personinfo">
+      <img class="personikon" src="{{ image "Personikon.png" }}" />
+      <div class="persontekst">
+        <p class="sendt">
+          Sendt til NAV {{ iso_to_nor_date sendt }}
+        </p>
+        <p class="navn">
+          {{ navn }}
+        </p>
+        <p class="id">
+          {{ insert_at fnr 6 }}
+        </p>
+      </div>
     </div>
-    <div class="container">
-        <div class="personinfo">
-            <img class="personikon" src="{{ image "Personikon.png" }}" />
-            <div class="persontekst">
-                <p class="sendt">
-                    Sendt til NAV {{ iso_to_nor_date sendt }}
-                </p>
-                <p class="navn">
-                    {{ navn }}
-                </p>
-                <p class="id">
-                    {{ insert_at fnr 6 }}
-                </p>
-            </div>
+    <div class="sporsmalcontainer">
+      {{# each sporsmal~}}
+      <div class="sporsmal">
+        <p class="sporsmalstekst">
+          {{ sporsmalstekst }}
+        </p>
+        {{#eq svartype "PERIODER" }}
+        <p class="svar svar--perioder">
+          {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
+        </p>
+        {{/eq}}
+        {{#eq svartype "FRITEKST" }}
+        <p class="svar">
+          {{ svar.0.verdi }}
+        </p>
+        {{/eq}}
+        {{#eq svartype "JA_NEI" }}
+        <div class="svarcontainer">
+          <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+          <span class="svar svar--checkbox">
+            {{ capitalize svar.0.verdi }}
+          </span>
         </div>
-        <div class="sporsmalcontainer">
-        {{# each sporsmal~}}
-            <div class="sporsmal">
-                <p class="sporsmalstekst">
-                    {{ sporsmalstekst }}
-                </p>
-                {{#eq svartype "PERIODER" }}
-                    <p class="svar svar--perioder">
-                        {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
-                    </p>
-                {{/eq}}
-                {{#eq svartype "FRITEKST" }}
-                    <p class="svar">
-                        {{ svar.0.verdi }}
-                    </p>
-                {{/eq}}
-                {{#eq svartype "CHECKBOX" }}
-                    <div class="svarcontainer">
-                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-                        <span class="svar svar--checkbox">
-                            {{ svar.0.verdi }}
-                        </span>
-                    </div>
-                {{/eq}}
-                {{#eq svartype "IKKE_RELEVANT" }}
-                    {{#if undertekst}}
-                        {{safe undertekst}}
-                    {{/if}}
-                    <div class="svarcontainer">
-                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-                        <span class="svar svar--checkbox">
-                            {{ svar.0.verdi }}
-                        </span>
-                    </div>
-                {{/eq}}
-            </div>
-            {{# each undersporsmal~}}
-              <div class="sporsmal">
-                <p class="sporsmalstekst">
-                    {{ sporsmalstekst }}
-                </p>
-                {{#eq svartype "PERIODER" }}
-                    <p class="svar svar--perioder">
-                        {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
-                    </p>
-                {{/eq}}
-                {{#eq svartype "FRITEKST" }}
-                    <p class="svar">
-                        {{ svar.0.verdi }}
-                    </p>
-                {{/eq}}
-                {{#eq svartype "CHECKBOX" }}
-                    <div class="svarcontainer">
-                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-                        <span class="svar svar--checkbox">
-                            {{ svar.0.verdi }}
-                        </span>
-                    </div>
-                {{/eq}}
-                {{#eq svartype "IKKE_RELEVANT" }}
-                    {{#if undertekst}}
-                        {{safe undertekst}}
-                    {{/if}}
-                    <div class="svarcontainer">
-                        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-                        <span class="svar svar--checkbox">
-                            {{ svar.0.verdi }}
-                        </span>
-                    </div>
-                {{/eq}}
-              </div>
-            {{~/each}}
-        {{~/each}}
+        {{/eq}}
+        {{#eq svartype "IKKE_RELEVANT" }}
+        {{#if undertekst}}
+        {{safe undertekst}}
+        {{/if}}
+        <div class="svarcontainer">
+          <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+          <span class="svar svar--checkbox">
+            {{ capitalize undersporsmal.0.sporsmalstekst }}
+          </span>
         </div>
+        {{/eq}}
+      </div>
+      {{# eq svar.0.verdi kriterieForVisningAvUndersporsmal }}
+      {{# if svar }}
+      {{# each undersporsmal~}}
+      <div class="sporsmal">
+        <p class="sporsmalstekst">
+          {{ sporsmalstekst }}
+        </p>
+        {{#eq svartype "PERIODER" }}
+        <p class="svar svar--perioder">
+          {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
+        </p>
+        {{/eq}}
+        {{#eq svartype "FRITEKST" }}
+        <p class="svar">
+          {{ svar.0.verdi }}
+        </p>
+        {{/eq}}
+        {{#eq svartype "JA_NEI" }}
+        <div class="svarcontainer">
+          <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+          <span class="svar svar--checkbox">
+            {{ capitalize svar.0.verdi }}
+          </span>
+        </div>
+        {{/eq}}
+        {{#eq svartype "IKKE_RELEVANT" }}
+        {{#if undertekst}}
+        {{safe undertekst}}
+        {{/if}}
+        <div class="svarcontainer">
+          <img class="checkbox" src="{{ image "Checkboks.png" }}" />
+          <span class="svar svar--checkbox">
+            {{ svar.0.verdi }}
+          </span>
+        </div>
+        {{/eq}}
+      </div>
+      {{~/each}}
+      {{/if}}
+      {{/eq}}
+      {{~/each}}
     </div>
-    <p class="footer">
-        {{ soknadsId }}
-    </p>
+  </div>
+  <p class="footer">
+    {{ soknadsId }}
+  </p>
 </body>
 </html>
