--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -4,7 +4,7 @@
     </p>
     {{#eq svartype "PERIODER" }}
       <p class="svar svar--perioder">
-        {{ iso_to_nor_date svar.0.verdi}} – {{ iso_to_nor_date svar.1.verdi}}
+        {{ iso_to_date svar.0.verdi}} – {{ iso_to_date svar.1.verdi}}
       </p>
     {{/eq}}
     {{#eq svartype "FRITEKST" }}
