Adds the use of block parameters

--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -34,8 +34,8 @@
 </div>
 {{# eq svar.0.verdi kriterieForVisningAvUndersporsmal }}
     {{# if svar }}
-        {{# each undersporsmal ~}}
-            {{> syfosoknader/partials/spmpartial u }}
+        {{# each undersporsmal as |underspm index| ~}}
+            {{> syfosoknader/partials/spmpartial underspm }}
         {{/each}}
     {{/if}}
 {{/eq}}
