Fixes call to a block partial

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    {{#block syfosoknader/partials/style }}
+    {{#block 'syfosoknader/partials/style' }}
     {{/block}}
 </head>
 <body>
