Videre arbeid på søknad for selvstendige / frilansere

--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -58,7 +58,7 @@
     .navn {
         font-weight: bold;
         font-size: 14px;
-        width: 430px;
+        width: 350px;
     }
 
     .id {
@@ -78,9 +78,9 @@
 
     .sendt {
         position: absolute;
-        right: 1cm;
+        right: 2cm;
         font-size: 10px;
-        width: 180px;
+        width: 250px;
     }
 
     .sporsmalcontainer {
@@ -112,6 +112,7 @@
     }
 
     .checkbox {
+        vertical-align: top;
         width: 13px;
         margin: -1px 5px 0px 1px;
     }
