--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -1,36 +1,84 @@
 <div class="sporsmal">
-    <p class="sporsmalstekst">
-        {{ sporsmalstekst }}
-    </p>
-    {{#eq svartype "PERIODER" }}
-      <p class="svar svar--perioder">
-        {{ iso_to_date svar.0.verdi}} – {{ iso_to_date svar.1.verdi}}
-      </p>
+
+    {{#eq svartype "CHECKBOX"}}
+        {{#each svar as |s index|~}}
+            {{#eq verdi "CHECKED"}}
+                <div class="svarcontainer">
+                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <span class="svar svar--checkbox">
+                        {{ capitalize sporsmalstekst }}
+                    </span>
+
+                </div>
+            {{/eq}}
+        {{/each}}
     {{/eq}}
-    {{#eq svartype "FRITEKST" }}
-      <p class="svar">
-        {{ svar.0.verdi }}
-      </p>
-    {{/eq}}
-    {{#eq svartype "JA_NEI" }}
-      <div class="svarcontainer">
-        <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-        <span class="svar svar--checkbox">
-          {{ capitalize svar.0.verdi }}
-        </span>
-      </div>
-    {{/eq}}
-    {{#eq svartype "IKKE_RELEVANT" }}
-        {{#if undertekst}}
-            {{safe undertekst}}
-        {{/if}}
-        <div class="svarcontainer">
-            <img class="checkbox" src="{{ image "Checkboks.png" }}" />
-            <span class="svar svar--checkbox">
-                {{ capitalize undersporsmal.0.sporsmalstekst }}
-            </span>
-        </div>
-    {{/eq}}
+
+    {{#not_eq svartype "CHECKBOX"}}
+
+        <p class="sporsmalstekst">
+            {{ sporsmalstekst }}
+        </p>
+
+        {{#switch svartype}}
+            {{#case "DATO"}}
+                {{# each svar }}
+                    <p class="svar svar--dato">
+                        {{ iso_to_date verdi}}
+                    </p>
+                {{/each}}
+            {{/case}}
+
+            {{#case "PERIODER"}}
+                {{# each svar }}
+                    <p class="svar">
+                        {{ iso_to_date svar.0.verdi}} – {{ iso_to_date svar.1.verdi}}
+                    </p>
+                {{/each}}
+            {{/case}}
+
+            {{#case "FRITEKST"}}
+                <p class="svar">
+                    {{ svar.0.verdi }}
+                </p>
+            {{/case}}
+
+            {{#case "JA_NEI"}}
+                <div class="svarcontainer">
+                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <span class="svar svar--checkbox">
+                        {{ capitalize svar.0.verdi }}
+                    </span>
+                </div>
+            {{/case}}
+
+            {{#case "TIMER"}}
+                <p class="svar">
+                    {{ formatComma svar.0.verdi }} timer
+                </p>
+            {{/case}}
+
+            {{#case "PROSENT"}}
+                <p class="svar">
+                    {{ svar.0.verdi }} %
+                </p>
+            {{/case}}
+
+            {{#case "IKKE_RELEVANT"}}
+                {{#if undertekst}}
+                    {{safe undertekst}}
+                {{/if}}
+                <div class="svarcontainer">
+                    <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
+                    <span class="svar svar--checkbox">
+                        {{ capitalize undersporsmal.0.sporsmalstekst }}
+                    </span>
+                </div>
+            {{/case}}
+        {{/switch}}
+    {{/not_eq}}
+
+
 </div>
 {{# eq svar.0.verdi kriterieForVisningAvUndersporsmal }}
     {{# if svar }}
